--- a/style.css
+++ b/style.css
@@ -7,8 +7,12 @@
 }
 
 #startButton {
-    margin-top: 120px;
+    margin-top: 30px;
     margin-bottom: 20px;
+}
+
+#quizWindow {
+    margin-top: 30px;
 }
 
 /* #question {
