--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     margin-bottom: 20px;
 };
 
-#prevScores {
+#timer {
     margin-bottom: 30px;
 };
+
+#scoreWindow {
+    margin-top: 30px;
+}
